embeddable-say-editor/app/styles/app.scss
// Appuniversum theme
@import "ember-power-select";
@import "@appuniversum/ember-appuniversum/styles";
@import "ember-rdfa-editor";
@import "citaten-plugin";
@import "date-plugin";
@import "variable-plugin";
@import "besluit-plugin";
@import 'article-structure-plugin';
@import 'template-comments-plugin';
@import 'confidentiality-plugin';
@import 'location-plugin';
@import 'structure-plugin';

div.table-of-contents {
  padding: $au-unit-small !important;
  margin-bottom: $au-unit-large;
  outline: 0.2rem dashed var(--au-gray-300);
  outline-offset: 0.2rem;

  h3 {
    margin-top: 0;
  }

  ul {
    margin-top: $au-unit-tiny;
    padding-left: 0;
  }

  ul ul {
    margin-left: 0;
  }

  ul li {
    list-style-type: none !important;
  }
}

.notule-editor {
  // VARIABLES START

  // Font Family
  --default-font-family: "flanders-sans", BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
  --au-font: var(--say-font-family, var(--default-font-family));

  // Font Size
  --default-text-font-size: 15px;
  --default-h1-font-size: 44px;
  --default-h2-font-size: 32px;
  --default-h3-font-size: 26px;
  --default-h4-font-size: 20px;
  --default-h5-font-size: 18px;
  --default-h6-font-size: 16px;

  // Background color
  --default-bg-color: #f7f9fc;

  // Spacing
  --default-paragraph-spacing: 12px;

  // VARIABLES END

  // TODO: Create a variable inside the editor repo itself, so we can target it instead of using selectors.
  //       Using this approach for a proof of concept.
  .say-container--paper .say-editor {
    background-color: var(--say-page-bg, var(--default-bg-color));
  }

  .say-content {
    $headings: h1, h2, h3, h4, h5, h6;

    font-size: var(--say-font-size-text, var(--default-text-font-size));

    @each $heading in $headings {
      #{$heading} {
        font-size: var(--say-font-size-#{$heading}, var(--default-#{$heading}-font-size));
      }
    }

    line-height: var(--say-editor-line-height, var(--au-global-line-height));

    p + * {
      margin-top: var(--say-paragraph-spacing, var(--default-paragraph-spacing));
    }

    .column-resize-handle {
      margin-top: 0;
    }
  }

  .say-editor__paper {
    &.min-content {
      min-height: min-content;

      .say-content {
        min-height: min-content;
      }
    }
  }
  .say-toolbar .say-toolbar__side-dropdown .au-c-pill{
    width: max-content;
  }
}

.au-c-icon {
  g[fill="none"] {
    fill: currentColor;
  }
}

